# nova_memoryresource

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/nova/pmr/: mimalloc_memory_resource.hpp  policies.hpp  static_monotonic_buffer_resource.hpp  tlsf_memory_resource.hpp
include/nova/pmr/detail/: memlock.hpp
tests/: test_memory_resource.cpp
